# image-change-detector

./: .gitignore  README.md  config.desktop.yaml  config.yaml  install_desktop_app.sh  main.py  pyproject.toml  requirements-desktop.txt  requirements.txt  video_compare_desktop.py
.github/workflows/: build-windows-exe.yml
docs/: object_memory_video_change_detection.md  video_diff_flow.md  video_diff_flow_high_level.md  video_temporal_alignment.md
samples/: .gitkeep
scripts/: build_windows_exe.ps1
src/: __init__.py  aligner.py  api.py  benchmark.py  config.py  detector.py  exceptions.py  logging_config.py  multiscale.py  normalizer.py  object_detector.py  reasoning.py  reasoning.py.bak  training.py  utils.py  video_compare.py
tests/: conftest.py  test_aligner.py  test_benchmark.py  test_config.py  test_detector.py  test_exceptions.py  test_multiscale.py  test_normalizer.py  test_object_detector_guard.py  test_training.py  test_utils.py
